[project]
name = "image-editor"
version = "0.1.0"
description = "多轮修图 Agent 框架 — 基于豆包大模型 + LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4,<1.0",
    "openai>=1.0,<2.0",
    "httpx>=0.25,<1.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.20,<1.0",
    "pydantic>=2.0,<3.0",
    "Pillow>=10.0,<12.0",
]

[tool.setuptools.packages.find]
include = ["image_editor*"]
